src/app/components/creator/footer-content/footer-content.component.scss
.footer-content {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: fit-content;
  justify-content: center;
}

@media (min-width:300px) {
  .footer-content {
    width: 100%;
  }
}

@media (min-width:480px)
{
  .footer-content {
    width: 75%;
  }
}


@media (min-width:801px) {
  .footer-content {
    width: 50%;
  }
}


app-call-queue-ui {
  height: fit-content;
  width: 75%;
}

// @media screen and (min-width: 1401px) {
//   .footer-content {
//     width: 50%;
//   }
// }






app-setup-buy-call {
  display: flex;
  justify-content: center;
  width: 100%;
}

.footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
}

.pfp {
  height: 4rem;
  width: 4rem;
  border-radius: 50%;


}

.profile {
  display: flex;
  justify-content: left;
  align-items: center;
  gap: 0.5rem;
  
}

